--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cstutor",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@tabler/icons-react": "^3.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "stelios": "^0.1.16",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
