--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "^0.1.17",
+    "stelios": "^0.1.37",
+    "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
   "scripts": {
