--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "^0.1.45",
+    "stelios": "^0.1.47",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
