--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "@types/node": "^16.18.102",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "^0.1.48",
+    "stelios": "^0.1.54",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
