--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "cstutor",
   "version": "0.1.0",
   "dependencies": {
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@tabler/icons-react": "^3.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,13 +14,12 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "^0.1.54",
+    "stelios": "^0.1.62",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
