React-Tutor browsername updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cstutor",
+  "homepage": "https://yuva0.github.io/react-tutor/",
   "version": "0.1.0",
   "dependencies": {
     "@mdx-js/mdx": "^3.0.1",
@@ -24,6 +25,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
