--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "^0.1.112",
+    "stelios": "0.1.112",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
