Removed GH-Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "cstutor",
-  "homepage": "https://yuva0.github.io/react-tutor/",
   "version": "0.1.1",
   "dependencies": {
     "@mdx-js/mdx": "^3.0.1",
@@ -25,10 +24,8 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
