--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cstutor",
+  "homepage": "https://yuva0.github.io/react-tutor/",
   "version": "0.1.1",
   "dependencies": {
     "@mdx-js/mdx": "^3.0.1",
@@ -19,11 +20,13 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
-    "stelios": "0.1.112",
+    "stelios": "0.1.113",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
